--- a/client/src/components/Base/Navigation/styles/_select-category.scss
+++ b/client/src/components/Base/Navigation/styles/_select-category.scss
@@ -1,7 +1,9 @@
 .select__category{
-     width: 15vw;
+     //width: 15vw;
      border: 1px solid #464646;
      padding: 15px;
+     height: 34px;
+
      display: flex;
      flex-direction: row;
      flex-wrap: nowrap;
@@ -12,6 +14,7 @@
      margin-right: -2px;
      .select-text{
           font-size: 14px;
+          padding: 10px;
      }
      .select-icon img{
           width: 24px;
@@ -26,33 +29,81 @@
           margin-left: 10px;
      }
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1440px) {
      .select__category{
-        // background-color: red;
+        .select-text{
+               font-size: 11px;
+               padding: 6px;
+               
+          }
      }
  }
    
- @media screen and (max-width: 992px) {
+ @media screen and (max-width: 1200px) {
      .select__category{
+          .select-text{
+               font-size: 1.1vw;
+               padding: 0;
+          }
      }
  }
    
- @media screen and (max-width: 768px) {
+ @media screen and (max-width: 1024px) {
      .select__category{
-          width: 30vw;
+          //width: 30vw;
+          .select-text{
+               font-size: 1.5vw
+          }
      }
      
  }
+ @media screen and (max-width: 840px) {
+     .select__category{
+          .select-text{
+               font-size: 1.7vw
+          }
+     }
+     
+ }
+ @media screen and (max-width: 768px) {
+     .select__category{
+          .select-text{
+               font-size: 2.2vw
+          }
+     }
+     
+ }
+ @media screen and (max-width: 648px) {
+     .select__category{
+          .select-text{
+               font-size: 3vw
+          }
+     }
+     
+ }
+
    
  @media screen and (max-width: 480px) {
      .select__category{
+          .select-text{
+               font-size: 3.3vw
+          }
+     }
+ }
+   
+ @media screen and (max-width: 360px) {
+     .select__category{
+          .select-text{
+               font-size: 4vw
+          }
      }
  }
    
  @media screen and (max-width: 320px) {
      .select__category{
-         
- 
+          .select-text{
+               font-size: 4.6vw
+          }
      }
  }
    
