--- a/client/src/components/Base/Header-Down/styles/_cart-part.scss
+++ b/client/src/components/Base/Header-Down/styles/_cart-part.scss
@@ -1,4 +1,3 @@
-
 .cart__part{
      margin-right: 10px;
      position: relative;
@@ -31,3 +30,44 @@
           height: auto;
      }
 }
+@media screen and (max-width: 840px) {
+     .cart__part{
+          .quantity{
+               font-size: 2.2vw;
+          }
+         
+     }
+ }
+@media screen and (max-width: 648px) {
+     .cart__part{
+          .quantity{
+               font-size: 3vw;
+          }
+         
+     }
+ }
+@media screen and (max-width: 480px) {
+     .cart__part{
+          .quantity{
+               font-size: 4vw;
+          }
+         
+     }
+ }
+@media screen and (max-width: 360px) {
+     .cart__part{
+          .quantity{
+               font-size: 5vw;
+          }
+         
+     }
+ }
+@media screen and (max-width: 320px) {
+     .cart__part{
+          .quantity{
+               font-size: 6vw;
+          }
+         
+     }
+ }
+
