--- a/client/src/components/Base/Header/styles/_header-main.scss
+++ b/client/src/components/Base/Header/styles/_header-main.scss
@@ -12,7 +12,7 @@ header{
     justify-content: space-between;
     align-items: center;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1280px) {
     header{
         width: 120vw;
 
@@ -30,7 +30,8 @@ header{
   
 @media screen and (max-width: 840px) {
      header{
-         width: 170vw;
+         width: 190vw;
+         //font-size: 20px;
      }
  }
 @media screen and (max-width: 648px) {
