--- a/client/src/components/Base/Header/styles/_settings.scss
+++ b/client/src/components/Base/Header/styles/_settings.scss
@@ -5,19 +5,18 @@
      flex-wrap: wrap;
      flex-direction: row;
      align-items: center;
-     .settings__currency{
+     .setting__item{
           position: relative;
-          width: 50px;
+          //width: 50px;
           height: 35px;
           display: flex;
           padding: 5px;
           &:hover{
-
                .settings__currency__item{
                     display: inline-block;
+                    background-color: #434343;
                     position: absolute;
-                    top: 35px;
-                    
+                    top: 40px;
                }
           }
           .setting__currency{
@@ -26,11 +25,9 @@
                &:hover{
                     cursor: pointer;
                     background-color: #d58e32;
-     
                }
          }
           .settings__currency__item{
-
                display: none;
           }
      }
@@ -38,12 +35,50 @@
           width: 100px;
      }
      .settings__about{
+          padding: 5px;
           a{
                color: var(--white);
-               vertical-align: text-top;
                text-decoration: none;
           }
      }
     
 
 }
+@media screen and (max-width: 840px) {
+     .settings{
+          .setting__item{
+               font-size: 2.2vw;
+          }
+         //font-size: 20px;
+     }
+ }
+@media screen and (max-width: 648px) {
+     .settings{
+          .setting__item{
+               font-size: 3vw;
+          }
+     }
+ }
+@media screen and (max-width: 480px) {
+     .settings{
+          .setting__item{
+               font-size: 4vw;
+          }
+     }
+ }
+@media screen and (max-width: 360px) {
+     .settings{
+          .setting__item{
+               font-size: 5vw;
+          }
+     }
+ }
+
+
+@media screen and (max-width: 320px) {
+     .settings{
+          .setting__item{
+               font-size: 6vw;
+          }
+     }
+ }
