--- a/client/src/components/Base/Navigation/styles/_search-product.scss
+++ b/client/src/components/Base/Navigation/styles/_search-product.scss
@@ -13,10 +13,10 @@
               width: 50%;
               padding: 17px;
               .search-input{
-                   
-                   padding: 17px 34px;
+                   height: 25px;
+                   padding: 19px 34px;
                    position: absolute;
-                   top: -11px;
+                   top: -16px;
                    left: 0;
                    width: 50%;
                }
@@ -75,17 +75,95 @@
 
 }
 
-@media screen and (max-width: 1200px) {
-     .search__part{
-          .search-input{
+
+@media screen and (max-width: 1024px) {
+     .search__area{
+          .search__part{
+               .search__products{
+                    .search-input{
+                         font-size: 1.8vw;
+                    }
+               }
           }
      }
  }
    
+ @media screen and (max-width:840px) {
+      .search__area{
+           width: 60%;
+           .search__part{
+               .search__products{
+                    .search-input{
+                         font-size: 1.8vw;
+                    }
+               }
+          }
+      }
+      
+ }
 
    
 @media screen and (max-width: 768px) {
-
+     .search__area{
+          width: 60%;
+          .search__part{
+               .search__products{
+                    .search-input{
+                         font-size: 2.2vw;
+                    }
+               }
+          }
+     }
+     
+}
+@media screen and (max-width: 648px) {
+     .search__area{
+          width: 70%;
+          .search__part{
+               .search__products{
+                    .search-input{
+                         font-size: 3vw;
+                    }
+               }
+          }
+     }
+     
+}
+@media screen and (max-width: 480px) {
+     .search__area{
+          width: 75%;
+          .search__part{
+               .search__products{
+                    .search-input{
+                         font-size: 3.3vw;
+                    }
+               }
+          }
+     }
+     
+}
+@media screen and (max-width: 360px) {
+     .search__area{
+          .search__part{
+               .search__products{
+                    .search-input{
+                         font-size: 5vw;
+                    }
+               }
+          }
+     }
+     
+}
+@media screen and (max-width: 320px) {
+     .search__area{
+          .search__part{
+               .search__products{
+                    .search-input{
+                         font-size: 6vw;
+                    }
+               }
+          }
+     }
      
 }
    
