--- a/client/src/components/Base/Product/styles/_products.scss
+++ b/client/src/components/Base/Product/styles/_products.scss
@@ -7,200 +7,300 @@
       align-items: center;
       height: auto;
       gap: 70px;
-         .product{
-               width: 280px;
-               height: 500px;
-               display: flex;
-               flex-direction: column;
-               align-items: stretch;
-               text-align: center;
+     .product{
+          width: 280px;
+          height: 500px;
+          display: flex;
+          flex-direction: column;
+          align-items: stretch;
+          text-align: center;
+          position: relative;
+          &:hover{
+               box-shadow: 0 0 15px #ccc;
+               transition: box-shadow 0.3s ease-in-out;
+          }
+          .sale{
+               position: absolute;
+               top: 2%;
+               left: 50%;
+               transform: translate(-50%, -50%);
+               height: 20px;
+               width: 45px;
+               z-index: 99998;
+               border-radius: 0 0 15px 15px;
+               background-color: #2a2a2a;
+               color: #fff;
+               font-size: 12px;
+          }
+          .product-pictures{
+               transition: display ease-in-out 2s 2s;
                position: relative;
-               &:hover{
-                    box-shadow: 0 0 15px #ccc;
-                    transition: box-shadow 0.3s ease-in-out;
+               img{
+                    width: 100%;
+                    vertical-align: middle;
+                    cursor: pointer;
+                    height: 350px;
                }
-               .sale{
-                    position: absolute;
-                    top: 2%;
-                    left: 50%;
-                    transform: translate(-50%, -50%);
-                    height: 20px;
-                    width: 45px;
-                    z-index: 99998;
-                    border-radius: 0 0 15px 15px;
+               button{
                     background-color: #2a2a2a;
                     color: #fff;
-                    font-size: 12px;
+                    padding: 8px 15px 8px 25px;
+                    position: absolute;
+                    bottom: 0;
+                    display: none;
+                    z-index: 99999;
+
                }
-               .product-pictures{
-                    transition: display ease-in-out 2s 2s;
-                    position: relative;
-                    img{
-                         width: 100%;
-                         vertical-align: middle;
-                         cursor: pointer;
-                         height: 350px;
-                    }
+               &:hover{
                     button{
-                         background-color: #2a2a2a;
-                         color: #fff;
-                         padding: 8px 15px 8px 25px;
-                         position: absolute;
-                         bottom: 0;
-                         display: none;
-                         z-index: 99999;
+                         cursor: pointer;
 
+                         display: inline;
                     }
-                    &:hover{
-                         button{
-                              cursor: pointer;
-
-                              display: inline;
+                    .add-to-cart{
+                         left: 50%;
+                         background-image:url(http://localhost:3001/icons/config/add-cart.svg) ;
+                         background-repeat: no-repeat;
+                         background-position: -3px;
+                         background-size: contain;
+                         &:hover{
+                              background-color: var(--orange);
                          }
-                         .add-to-cart{
-                              left: 50%;
-                              background-image:url(http://localhost:3001/icons/config/add-cart.svg) ;
-                              background-repeat: no-repeat;
-                              background-position: -3px;
-                              background-size: contain;
-                              &:hover{
-                                   background-color: var(--orange);
-                              }
-                              img{
-                                   width: 15px;
-                                   height: 15px;
-                              }
+                         img{
+                              width: 15px;
+                              height: 15px;
                          }
-                         .quick-view{
-                              
-                              left: 10px;
-                         }
+                    }
+                    .quick-view{
+                         
+                         left: 10px;
                     }
                }
-               .product-name{
-                    font-weight: 500;
-                    margin-top: 10px;
-                    padding: 5px 0;
-                    .product-link{
-                         text-decoration: none;
-                              color:  var(--black);
-                              &:hover{
-                                   color: var(--orange);
-                              }
+          }
+          .product-name{
+               font-weight: 500;
+               margin-top: 10px;
+               padding: 5px 0;
+               height: 50px;
+               .product-link{
+                    text-decoration: none;
+                         color:  var(--black);
+                         &:hover{
+                              color: var(--orange);
                          }
-              }
+                    }
+          }
 
-               .product-options{
-                    display: flex;
-                    flex-wrap: nowrap;
-                    flex-direction: row;
-                    align-content: flex-end;
-                    justify-content: space-between;
-                    align-items: center;
-                    margin-top: 10px;
-                    .product-buttons{
-                         .product-button{
-                              width: 35px;
-                              height: 35px;
-                              vertical-align: middle;
-                              background-color: #fff;
-                              font-size: 15px;
-                              cursor: pointer;
-                              &:hover{
-                                   background-color: #d58e32;
-                              }
-                         }
-                         
-                         .button-favorite{
-                              &::before{
-                                   content: "\2661" ;
-                              }
-                         }
-                         .button-favorite-full{
-                              &::before{
-                                   content: "\2661" ;
-                                   color: #fff;
-                              }
-                              border-color: #d58e32;
+          .product-options{
+               display: flex;
+               flex-wrap: nowrap;
+               flex-direction: row;
+               align-content: flex-end;
+               justify-content: space-between;
+               align-items: center;
+               margin-top: 10px;
+               .product-buttons{
+                    .product-button{
+                         width: 35px;
+                         height: 35px;
+                         vertical-align: middle;
+                         background-color: #fff;
+                         font-size: 15px;
+                         cursor: pointer;
+                         &:hover{
                               background-color: #d58e32;
                          }
-                         .button-compare{
-                              &::before{
-                                   content: "\21C4" ;
-                              }
+                    }
+                    
+                    .button-favorite{
+                         &::before{
+                              content: "\2661" ;
                          }
                     }
-                    .product-prices{
-                         .product-price{
-                              width: 60px;
-                              height: 35px;
-                              padding: 5px;
-                         }
-                         .new-price{
-                              background-color: #2a2a2a;
+                    .button-favorite-full{
+                         &::before{
+                              content: "\2661" ;
                               color: #fff;
+                         }
+                         border-color: #d58e32;
+                         background-color: #d58e32;
+                    }
+                    .button-compare{
+                         &::before{
+                              content: "\21C4" ;
                          }
                     }
                }
-               
+               .product-prices{
+                    .product-price{
+                         padding: 5px;
+                    }
+                    .new-price{
+                         background-color: #2a2a2a;
+                         color: #fff;
+                    }
+               }
           }
+          
+     }
 }
 @media screen and (max-width:1280px){
      .products-list{
          gap:50px;
-         width: 85vw;
          justify-content: center;
+         .product{
+               .sale{
+                    font-size: 1.2vw;
+               }
+               
+
+         }
      }
 }
 @media screen and (max-width:1140px){
      .products-list{
          gap:15px;
-         width: 100vw;
+         
      }
 }
 @media screen and (max-width:1085px){
      .products-list{
           gap: 15px;
-          width: 100vw;
+          .product{
+               .sale{
+                    font-size: 1.5vw;
+               }
+          }
      }
 }
 
 
+@media screen and (max-width:1024px){
+     .products-list{
+          .product{
+               .product-name{
+                    font-size: 2.3vw;
+               }
+               .product-options{
+                    .product-prices{
+                         font-size: 2.3vw;
+                    }
+               }
+          }
+     }
+}
 @media screen and (max-width:996px){
      .products-list{
          gap:30px;
-         width: 110vw;
+     
      }
 }
 @media screen and (max-width:840px){
      .products-list{
          gap:25px;
-         width: 115vw;
+         .product{
+               .sale{
+                    font-size: 1.8vw;
+               }
+               .product-name{
+                    font-size: 2.7vw;
+               }
+               .product-options{
+                    .product-prices{
+                         font-size: 3.3vw;
+                    }
+               }
+          }
      }
 }
 @media screen and (max-width:768px){
      .products-list{
          gap:25px;
-         width: 150vw;
+         .product{
+               .sale{
+                    font-size: 2vw;
+               }
+               .product-name{
+                    font-size:3.4vw;
+               }
+               .product-options{
+                    .product-prices{
+                         font-size: 3.5vw;
+                    }
+               }
+          }
      }
 }
 @media screen and (max-width:648px){
      .products-list{
          gap:50px;
-         width: 150vw;
+         .product{
+               .sale{
+                    font-size: 2.2vw;
+               }
+               .product-name{
+                    font-size: 4vw;
+               }
+               .product-options{
+                    .product-prices{
+                         font-size: 4.5vw;
+                    }
+               }
+          }
      }
 }
 @media screen and (max-width:480px){
      .products-list{
-         gap:30px;
-         width: 150vw;
+         gap:25px;
+         .product{
+               .sale{
+                    font-size: 3vw;
+               }
+               .product-name{
+                    font-size: 5vw;
+               }
+               .product-options{
+                    .product-prices{
+                         font-size: 5.6vw;
+                    }
+               }
+          }
+     }
+}
+@media screen and (max-width:360px){
+     .products-list{
+         .product{
+               .sale{
+                    font-size: 4vw;
+               }
+               .product-name{
+                    font-size: 6.3vw;
+               }
+               .product-options{
+                    .product-prices{
+                         font-size: 7.3vw;
+                    }
+               }
+          }
 
      }
 }
 @media screen and (max-width:320px){
      .products-list{
          gap:30px;
-         width: 210vw;
+         .product{
+               .sale{
+                    font-size: 4.5vw;
+               }
+               .product-name{
+                    font-size: 7.4vw;
+               }
+               .product-options{
+                    .product-prices{
+                         font-size: 8.3vw;
+                    }
+               }
+          }
 
      }
 }
