--- a/client/src/components/Home/Collections/styles/_guest-room.scss
+++ b/client/src/components/Home/Collections/styles/_guest-room.scss
@@ -167,7 +167,7 @@
      }
 
 }
-@media screen and (max-width:1200px){
+@media screen and (max-width:1280px){
      .collections{
           width: 120vw;
           
@@ -176,8 +176,10 @@
 @media screen and (max-width:1024px){
      .collections{
           width:140vw;
-
           .collections__container{
+               .collections-header{
+                    font-size: 3vw;
+               }
                .collections__content{
                     .guest__room{
                          .guest__room__sofa{
@@ -200,14 +202,27 @@
 
      }
 }
+
+@media screen and (max-width:996px){
+     .collections{
+          width: 150vw;
+          
+     }
+}
 @media screen and (max-width:840px){
      .collections{
-          width: 170vw;
+          width: 190vw;
+          .collections-header{
+               font-size: 4vw;
+          }
      }
 }
 @media screen and (max-width:768px){
      .collections{
           .collections__container{
+               .collections-header{
+                    font-size: 4.5vw;
+               }
                .collections__content{
                     .guest__room{
                          .guest__room__sofa{
@@ -234,6 +249,9 @@
      .collections{
           width: 200vw;
           .collections__container{
+               .collections-header{
+                    font-size: 5vw;
+               }
                .collections__content{
                     .guest__room{
                          .guest__room__sofa{
@@ -248,6 +266,9 @@
      .collections{
           width: 220vw;
           .collections__container{
+               .collections-header{
+                    font-size: 6vw;
+               }
                .collections__content{
                     .guest__room{
                          .guest__room__sofa{
@@ -273,15 +294,23 @@
 @media screen and (max-width:360px){
      .collections{
           width: 250vw;
+          .collections__container{
+               .collections-header{
+                    font-size: 8vw;
+
+               }
+          }
      }
 }
 @media screen and (max-width:320px){
      .collections{
           width: 280vw;
-          // .collections-header{
-          //      width: 235vw;
-          // }
+
           .collections__container{
+               .collections-header{
+                    font-size: 10vw;
+
+               }
                .collections__content{
                    // width: 235vw;
                     min-width: 320px;
