--- a/client/src/components/Home/HotDealsCarousel/HotDeals/HotDealsHeader/styles/_hot-deals-header.scss
+++ b/client/src/components/Home/HotDealsCarousel/HotDeals/HotDealsHeader/styles/_hot-deals-header.scss
@@ -4,11 +4,9 @@
      display: flex;
      flex-direction: row;
      flex-wrap: nowrap;
-     align-content: center;
      justify-content: space-between;
      align-items: flex-start;
      h4{
-          font-size: 1vw;
           color: #e2e2e2;
      }
      .circles{
@@ -35,14 +33,35 @@
 @media screen and (max-width:996px){
      .hot__deals_header{
          h4{
-            font-size: 2.8vw;
+            font-size: 1.4vw;
+         }
+     }
+ }
+@media screen and (max-width:840px){
+     .hot__deals_header{
+         h4{
+            font-size: 1.6vw;
+         }
+     }
+ }
+@media screen and (max-width:768px){
+     .hot__deals_header{
+         h4{
+            font-size: 2.5vw;
          }
      }
  }
 @media screen and (max-width:480px){
      .hot__deals_header{
          h4{
-            font-size: 3.3vw;
+            font-size: 5.3vw;
+         }
+     }
+ }
+@media screen and (max-width:360px){
+     .hot__deals_header{
+         h4{
+            font-size: 7.3vw;
          }
      }
  }
