--- a/client/src/components/Home/LatestBlog/styles/_latest-blog-header.scss
+++ b/client/src/components/Home/LatestBlog/styles/_latest-blog-header.scss
@@ -36,3 +36,59 @@
           }
      }
 }
+@media screen and (max-width:1024px){
+     .latest__blog__header{
+          .latest-blog-header{
+               font-size: 3vw;
+
+          }
+     }
+}
+@media screen and (max-width:840px){
+     .latest__blog__header{
+          .latest-blog-header{
+               font-size:4vw;
+
+          }
+     }
+}
+@media screen and (max-width:768px){
+     .latest__blog__header{
+          .latest-blog-header{
+               font-size:4.5vw;
+
+          }
+     }
+}
+@media screen and (max-width:648px){
+     .latest__blog__header{
+          .latest-blog-header{
+               font-size:5vw;
+
+          }
+     }
+}
+@media screen and (max-width:480px){
+     .latest__blog__header{
+          .latest-blog-header{
+               font-size:6vw;
+
+          }
+     }
+}
+@media screen and (max-width:360px){
+     .latest__blog__header{
+          .latest-blog-header{
+               font-size:8vw;
+
+          }
+     }
+}
+@media screen and (max-width:320px){
+     .latest__blog__header{
+          .latest-blog-header{
+               font-size:10vw;
+
+          }
+     }
+}
