--- a/client/src/components/Home/LatestBlog/styles/_latest-blog-main.scss
+++ b/client/src/components/Home/LatestBlog/styles/_latest-blog-main.scss
@@ -7,7 +7,7 @@
      }
 }
 
-@media screen and (max-width:1200px) {
+@media screen and (max-width:1280px) {
      .latest__blog{
          width: 120vw;
           .latest__blog__container{
@@ -23,9 +23,17 @@
           }
      }
 }
+@media screen and (max-width:840px) {
+     .latest__blog{
+         width: 190vw;
+          .latest__blog__container{
+               width:80%;
+          }
+     }
+}
 @media screen and (max-width:648px) {
      .latest__blog{
-         width: 180vw;
+         width: 200vw;
           .latest__blog__container{
                width:80%;
           }
@@ -45,5 +53,11 @@
           .latest__blog__container{
                width:80%;
           }
+     }
+}
+@media screen and (max-width:320px) {
+     .latest__blog{
+         width: 270vw;
+
      }
 }
