--- a/client/src/components/Home/Special-Offers/styles/_mostest-products.scss
+++ b/client/src/components/Home/Special-Offers/styles/_mostest-products.scss
@@ -183,7 +183,7 @@
                               padding: 20px 10px;
                               margin-bottom: -10px;
                               z-index: 9999;
-                              width: 70px;
+                              width: 80px;
                          .new-offer-price{
                               font-size: 20px;
                               font-weight: 300;
@@ -242,9 +242,125 @@
           }
      }
 }
+
+@media screen and (max-width:1024px){
+     .furniture__gallery{      
+          .furniture__gallery__header{
+               font-size: 3vw;
+
+          }
+     }
+}
+@media screen and (max-width:840px){
+     .furniture__gallery{      
+          .furniture__gallery__header{
+               font-size: 4vw;
+
+          }
+          .offers-categories{
+               .offers-items{
+                    .offers-item{
+                         font-size: 2.6vw;
+                    }
+               }
+          }
+          .offers-informations{
+               .offers-panels{
+                    .right-panel{
+                         .offer-items{
+                              .offer-prices{
+                                   .new-offer-price{
+                                        font-size: 2.8vw;
+                                   }
+                                   .old-offer-price{
+                                        font-size: 2.4vw;
+                                   }
+                              }
+                              .offer-content{
+                                   a{
+                                        font-size: 2.2vw;
+                                   }
+                              }
+                         }
+                    }
+               }
+          }
+     
+          
+     }
+}
+@media screen and (max-width:768px){
+     .furniture__gallery{      
+          .furniture__gallery__header{
+               font-size: 4.5vw;
+          }
+          .offers-categories{
+               .offers-items{
+                    .offers-item{
+                         font-size: 2.6vw;
+                    }
+               }
+          }
+          .offers-informations{
+               .offers-panels{
+                    .right-panel{
+                         .offer-items{
+                              .offer-prices{
+
+                                   .new-offer-price{
+                                        font-size: 3vw;
+                                   }
+                                   .old-offer-price{
+                                        font-size: 2.7vw;
+                                   }
+                              }
+                              .offer-content{
+                                   a{
+                                        font-size: 2.8vw;
+                                   }
+                              }
+                         }
+                    }
+               }
+          }
+          
+     }
+}
 @media screen and (max-width:648px){
      .furniture__gallery{
           margin-left: 50px;
+          .furniture__gallery__header{
+               font-size: 5vw;
+          }
+          .offers-categories{
+               .offers-items{
+                    .offers-item{
+                         font-size: 3vw;
+                    }
+               }
+          }
+          .offers-informations{
+               .offers-panels{
+                    .right-panel{
+                         .offer-items{
+                              .offer-prices{
+
+                                   .new-offer-price{
+                                        font-size: 3.7vw;
+                                   }
+                                   .old-offer-price{
+                                        font-size: 3.2vw;
+                                   }
+                              }
+                              .offer-content{
+                                   a{
+                                        font-size: 3.5vw;
+                                   }
+                              }
+                         }
+                    }
+               }
+          }
      }
 }
 @media screen and (max-width:480px){
@@ -253,6 +369,17 @@
           width: 100%;
           height: 600px;
           padding: 20px;
+          .furniture__gallery__header{
+               font-size: 6vw;
+
+          }
+          .offers-categories{
+               .offers-items{
+                    .offers-item{
+                         font-size: 5.9vw;
+                    }
+               }
+          }
           .furniture__gallery__content{
                height: 100%;
                .offers-informations{
@@ -268,9 +395,115 @@
                          }
 
                     }
+                    .offers-panels{
+                         .right-panel{
+                              .offer-items{
+                                   .offer-prices{
+                                        width: 120px;
+                                        height: 100px;
+                                        bottom: 70px;
+                                        display: flex;
+                                        flex-wrap: wrap;
+                                        flex-direction: column;
+                                        align-items: center;
+                                        justify-content: center;
+                                        .new-offer-price{
+                                             font-size: 6.7vw;
+                                        }
+                                        .old-offer-price{
+                                             font-size: 6.2vw;
+                                        }
+                                   }
+                                   .offer-content{
+                                        right: -47px;
+                                        a{
+                                             font-size: 4.7vw;
+                                        }
+                                   }
+                              }
+                         }
+                    }
                }
 
           }
 
+     }
+}
+@media screen and (max-width:360px){
+     .furniture__gallery{
+          .furniture__gallery__header{
+               font-size:8vw;
+
+          }
+          .offers-categories{
+               .offers-items{
+                    .offers-item{
+                         font-size: 6.4vw;
+                    }
+               }
+          }
+          .furniture__gallery__content{
+               .offers-informations{
+                    .offers-panels{
+                         .right-panel{
+                              .offer-items{
+                                   .offer-prices{
+                                        .new-offer-price{
+                                             font-size: 8.7vw;
+                                        }
+                                        .old-offer-price{
+                                             font-size: 7.7vw;
+                                        }
+                                   }
+                                   .offer-content{
+                                        a{
+                                             font-size: 6.2vw;
+                                        }
+                                   }
+                              }
+                         }
+                    }
+               }
+
+          }
+     }
+}
+@media screen and (max-width:320px){
+     .furniture__gallery{
+          .furniture__gallery__header{
+               font-size:10vw;
+
+          }
+          .offers-categories{
+               .offers-items{
+                    .offers-item{
+                         font-size: 6.6vw;
+                    }
+               }
+          }
+          .furniture__gallery__content{
+               .offers-informations{
+                    .offers-panels{
+                         .right-panel{
+                              .offer-items{
+                                   .offer-prices{
+                                        .new-offer-price{
+                                             font-size: 9.7vw;
+                                        }
+                                        .old-offer-price{
+                                             font-size: 8.7vw;
+                                        }
+                                   }
+                                   .offer-content{
+                                        a{
+                                             font-size: 7.2vw;
+                                        }
+                                   }
+                              }
+                         }
+                    }
+               }
+
+          }
      }
 }
